  All analyses in de.uni_kl.cs.disco.nc.analyses extend AbstractAnalysis and implement Analysis.
 * Split ArrivalBound.java into three parts:
  - The minimal ArrivalBound interface.
  - The abstract class ArrivalBoundDispatch that applies the configured arrival boundings.
  - The abstract class AbstractArrivalBound holds member variables for the network and the configurations.
  All arrival bounds in de.uni_kl.cs.disco.nc.arrivalbounds extend AbstractArrivalBound, all but the sink-tree version also implement ArrivalBound. 
* Disco (min,+)-algebraic operations:
  - Moved to new package de.uni_kl.cs.disco.minplus.dnc
  - All convolutions are called via a dispatcher, MinPlusDispatch.java. 
  - Extension to manipulate MPA RTC curves with their native operations is not yet tested. 

v2.4.0beta2 "Chimera" (2017-Aug-17)
-----------------------------------
* Interface and Dispatcher naming: interfaces do not have a suffix, dispatchers now suffixed with "Dispatch".
  - CurvePwAffineFactory renamed to CurvePwAffineFactoryDispatch 
  - CurvePwAffineFactoryInterface renamed to CurvePwAffineFactory
  - CurvePwAffineUtils renamed to CurvePwAffineUtilsDispatch
  - LinearSegmentFactory renamed to LinearSegmentFactoryDispatch
  - NumFactory renamed to NumFactoryDispatch
  - NumFactoryInterface renamed to NumFactory
  - NumUtils renamed to NumUtilsDispatch
  - NumUtilsInterface renamed to NumUtils
* Dispatch classes are all abstract now.
* Renamed OperatorInputChecks to MinPlusInputChecks.
* Made LinearSegmentUtils an abstract class (it only provides static methods). 
* Reworked CalculatorConfig.java to singleton pattern (improves tests run time considerably).

v2.4.0beta1 "Chimera" (2017-Aug-02)
-----------------------------------
* An alternative curve backend for the DiscoDNC analyses:
  This release wraps the MPA RTC Toolbox's curve implementation to be used with the DiscoDNC. It continues the work presented at ECRTS 2017: