@@ -33,11 +33,22 @@ import de.uni_kl.cs.disco.numbers.Num;
 import de.uni_kl.cs.disco.numbers.NumFactory;
 
 public class RealSingleFactory implements NumFactory {
+	private static RealSingleFactory instance;
+	
     private Num POSITIVE_INFINITY = createPositiveInfinity();
     private Num NEGATIVE_INFINITY = createNegativeInfinity();
     private Num NaN = createNaN();
     private Num ZERO = createZero();
     private Num EPSILON = createEpsilon();
+
+    protected RealSingleFactory() {} 
+	
+	public static RealSingleFactory getInstance() {
+		if( instance == null ) {
+			return new RealSingleFactory();
+		}
+		return instance;
+	}
 
     public Num getPositiveInfinity() {
         return POSITIVE_INFINITY;
